--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: graphql-backend
-    runtime: docker
+    runtime: java
     plan: free
     rootDir: backend
     buildCommand: mvn clean package -DskipTests
