--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,4 +18,7 @@ COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 
 # Comando por defecto
-CMD ["java", "-jar", "app.jar"]
+# CMD ["java", "-jar", "app.jar"]
+
+CMD ["sh", "-c", "java -jar app.jar --server.port=${PORT:-8080}"]
+
